[gd_scene load_steps=13 format=3 uid="uid://bcyovi8smfiay"]

[ext_resource type="Texture2D" uid="uid://ds7brhrnfcm4o" path="res://images/mushroom.png" id="1_gvsd5"]
[ext_resource type="Script" uid="uid://deyt4t2rqwyd" path="res://scripts/mushroom.gd" id="1_ke5i0"]
[ext_resource type="Shader" uid="uid://dha41nql3qnc3" path="res://shaders/PaletteSwap.gdshader" id="2_ohtko"]
[ext_resource type="AudioStream" uid="uid://bnkw84wgpgwer" path="res://audio/sfx-appear.ogg" id="3_u7jc2"]
[ext_resource type="Texture2D" uid="uid://ddsqisbwi1hke" path="res://images/palettes/palette.png" id="3_w3dyv"]
[ext_resource type="Texture2D" uid="uid://venov7vx0111" path="res://images/flower-head.png" id="6_w3dyv"]
[ext_resource type="Texture2D" uid="uid://bu1x6qb6phnu8" path="res://images/flower-stem.png" id="7_qfenl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ke5i0"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pl5ep"]
size = Vector2(16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qfenl"]
shader = ExtResource("2_ohtko")
shader_parameter/palette = ExtResource("3_w3dyv")
shader_parameter/accessRow = 7

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nl5uc"]
shader = ExtResource("2_ohtko")
shader_parameter/palette = ExtResource("3_w3dyv")
shader_parameter/accessRow = 6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0xksn"]
shader = ExtResource("2_ohtko")
shader_parameter/palette = ExtResource("3_w3dyv")
shader_parameter/accessRow = 8

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_ke5i0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_ke5i0")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4294967295
collision_mask = 4294967295

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pl5ep")
debug_color = Color(0.943534, 6.83457e-06, 0.601195, 0.42)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AppearSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_u7jc2")

[node name="Sprite2D" type="Node2D" parent="."]

[node name="Mushroom" type="Sprite2D" parent="Sprite2D"]
texture_filter = 1
material = SubResource("ShaderMaterial_qfenl")
texture = ExtResource("1_gvsd5")

[node name="FireFlower" type="Node2D" parent="Sprite2D"]

[node name="Head" type="Sprite2D" parent="Sprite2D/FireFlower"]
texture_filter = 1
material = SubResource("ShaderMaterial_nl5uc")
position = Vector2(0, -4)
texture = ExtResource("6_w3dyv")

[node name="Stem" type="Sprite2D" parent="Sprite2D/FireFlower"]
texture_filter = 1
material = SubResource("ShaderMaterial_0xksn")
position = Vector2(0, 4)
texture = ExtResource("7_qfenl")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
